--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jan Leeuwerink",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "connect-flash": "^0.1.1",
@@ -24,6 +25,7 @@
     "moment": "^2.26.0",
     "mongoose": "^5.7.4",
     "node-geocoder": "^3.27.0",
+    "nodemailer": "^6.4.8",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
