--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "star-rating.js": "^3.2.0"
   }
 }
